[project]
name = "python-mastery"
version = "0.1.0"
description = "Advanced python coursework."
authors = [
    { name = "bitmole", email = "robert@idea-loop.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "python_mastery:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_mastery"]
